software-center (1.1.21) UNRELEASED; urgency=low

  * merged from lp:~vish.../software-center/3newicons, 
    many thanks

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 25 Mar 2010 20:45:35 +0100

software-center (1.1.20) lucid; urgency=low

  * merged lp:~mpt/software-center/help-2.0, many thanks!
  * softwarecenter/distro/Ubuntu.py:
    - show correct maintenance status for packages in the partner 
      channel 
  * softwarecenter/app.py:
    - use glib.timeout_add_seconds()
  * softwarecenter/distro/__init__.py, softwarecenter/distro/Ubuntu.py:
    - add/implement "is_supported()"
  * softwarecenter/view/appview.py:
    - fix supported only view for packages

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 25 Mar 2010 17:53:43 +0100

software-center (1.1.19) lucid; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/channelpane.py:
    - hide ratings in channel pane also (LP: #538129)
  
  [ Michael Vogt ]
  * softwarecenter/view/catview.py:
    - fix i18n bug in category list (LP: #545102)
  * merge lp:~kiwinote/software-center/use_new_icons, many
    thanks!
  * fix i18n issue in featured application (LP: #545095)
  * merge  lp:~kiwinote/software-center/bug530187, many thanks to
    "Kiwinote" (LP: #530187)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 25 Mar 2010 09:48:54 +0100

software-center (1.1.18) lucid; urgency=low

  [ Michael Vogt ]
  * data/templates/AppDetailsView.html:
    - cherry pick progress nice bar improvements from 
      Michael Forrest (many thanks)
  * softwarecenter/view/appdetailsview.py:
    - show correct maintenance status for non applications
      (LP: #538172)
  * softwarecenter/view/appview.py:
    - use "ubuntu-almost-fixed-height-mode" when available
      to speed up the treeview drawing significantly
      (LP: #514879)
  * softwarecenter/view/softwarepane.py:
    - set show_ratings to "false" because ratings&reviews are
      cancelt for lucid (LP: #538129)
  * softwarecenter/view/appview.py: